--- a/src/main/resources/static/Parentview.html
+++ b/src/main/resources/static/Parentview.html
@@ -34,6 +34,7 @@
 <!--Link Dashboard and common js-->
   <script src="assets/js/common.js"></script>
   <script src="/assets/js/dashboard.js"></script>
+  <script src="/assets/js/ParentView.js"></script>
   <link rel="stylesheet" href="assets/fontawesom/css/all.css">
 
   <!-- =======================================================
@@ -291,12 +292,13 @@
             <div class="col-xxl-4 col-md-6">
               <div class="card info-card revenue-card">
                 <div class="card-body">
-                  <h5 class="card-title" style="color: #4d1354">Regsitered Student List</h5>
+                  <h5 class="card-title" style="color: #4d1354">Registered Student List</h5>
                   <div class="d-flex align-items-center">
-                    <div class="form-floating mb-6">
-                      <select class="form-select" id="floatingSelectStudent" aria-label="State">
+                    <div class="form-floating mb-6" style="width: 75%">
+                      <select onchange="getRegisteredClass()" class="form-select" id="floatingSelectStudent" aria-label="State">
                         <option selected>Select Student</option>
                       </select>
+                      <label for="floatingSelectStudent">Student Name=>Student ID</label>
                     </div>
 
                     <div class="ps-3">
@@ -314,10 +316,11 @@
                 <div class="card-body">
                   <h5 class="card-title" style="color: #4d1354">Student registered Classes</h5>
                   <div class="d-flex align-items-center">
-                    <div class="form-floating mb-6">
-                      <select class="form-select" id="floatingSelectClass" aria-label="State">-->
+                    <div class="form-floating mb-6" style="width: 75%">
+                      <select onchange="getAttendance()" class="form-select" id="floatingSelectClass" aria-label="State">-->
                         <option selected>Select Class</option>
                       </select>
+                      <label for="floatingSelectClass">Class Name</label>
                     </div>
 
 
@@ -378,9 +381,6 @@
   <script src="assets/vendor/tinymce/tinymce.min.js"></script>
   <script src="assets/vendor/php-email-form/validate.js"></script>
 
-  <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
-  <script src="assets/js/common.js"></script>
 
 <script>
 
@@ -389,52 +389,8 @@
     ParentFName.innerText = "Hello.." + loggeduser.parent.first_name + " " + loggeduser.parent.last_name;
   }
 
-  let registerstudentCount = httpGetRequest("/parent/getstudentcount?parentid="+loggeduser.parent.id);
+  let registerstudentCount = httpGetRequest("/parent/getstudentcount?parentid="+loggeduser.parent.nic);
   regStuCount.innerText = registerstudentCount.address;
-
-
-  const fillSelectFieldtwoproperty = (feildid,displayMg,dataList,displayProperty1,displayProperty2,selectedvalue,visibality = false) =>{
-
-    feildid.innerHTML = "";
-    //placeholder
-    element = document.createElement('option');
-    element.selected=true;
-    element.disabled=true
-    element.value="";
-    element.innerText=displayMg
-    feildid.appendChild(element);
-
-    //option
-    for(index in dataList){
-      element2 = document.createElement('option');
-      //element2.value=designation[index];
-
-      //convert object in to string
-      element2.value=JSON.stringify(dataList[index]);
-
-      element2.innerText=dataList[index][displayProperty1]+"==>"+dataList[index][displayProperty2]
-      if(selectedvalue == dataList[index][displayProperty1]){
-        element2.selected="selected";
-      }
-
-      feildid.appendChild(element2);
-
-
-    }
-
-    if(visibality)
-      feildid.disabled = true;
-    else
-      feildid.disabled = false;
-
-
-
-  }
-
-
-
-  getregistrationstudentlist = httpGetRequest("/parent/getstudentList?parentid="+loggeduser.parent.id)
-  fillSelectFieldtwoproperty(classList,"",getregistrationstudentlist,"first_name","studentid",parent.student_id.studentid);
 
 
 </script>
